--- a/twilight.config.yaml
+++ b/twilight.config.yaml
@@ -1,11 +1,11 @@
 # 站点配置
 site:
     # 站点 URL（以斜杠结尾）
-    siteURL: "https://twilight.spr-aachen.com/"
+    siteURL: "https://railstar.de5.net/"
     # 站点标题
-    title: "Twilight"
+    title: "Railnet"
     # 站点副标题
-    subtitle: "Blog Template"
+    subtitle: "御坂网络"
     # 语言配置
     lang: "en"
     # 翻译配置
@@ -77,7 +77,7 @@ site:
                 # 在主页显示文本
                 enable: true
                 # 主标题
-                title: "Twilight"
+                title: "railnet"
                 # 副标题，支持单个字符串或字符串数组
                 subtitle:
                     - "Illuminate Our Paths"
@@ -250,7 +250,7 @@ profile:
     # 头像配置 (相对于 /public 目录)
     avatar: "/assets/images/avatar.jpg"
     # 信息配置
-    name: "Twilight"
+    name: "Misaka"
     # 简介配置
     bio: "Hi"
     # 链接配置
@@ -268,7 +268,7 @@ announcement:
     # 公告标题
     title: "Announcement"
     # 公告内容
-    content: "Welcome to my blog!"
+    content: "网站已与2025.2.2完成迁移"
     # 允许用户关闭公告
     closable: true
     # 链接配置
